# KT-miniscience-4th-term

./: README.md
01_meshes/: CMakeLists.txt
01_meshes/src/: 3D_model.cpp  CMakeLists.txt  cylinder.cpp  data.stl  kub.cpp  round.cpp  sample04.cpp  tor.cpp  tor.stl  tor_3D.cpp
02_vtk/: CMakeLists.txt  tetr3d.cpp  wave.cpp
